dataset and heatmaps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(blue.colors)
 export(dusk.colors)
 export(eset_lm)
+export(heatmap.plus.2)
 export(hot.colors)
 export(hot2.colors)
 export(jet.colors)
 export(jet2.colors)
+export(plot_annHeatmap2)
