add func for taking feature ratios

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(blue.colors)
 export(dist)
 export(dusk.colors)
 export(eset_lm)
+export(exhaustive_ratios)
 export(heatmap.plus.2)
 export(hot.colors)
 export(hot2.colors)
