added global normalization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ export(hot.colors)
 export(hot2.colors)
 export(jet.colors)
 export(jet2.colors)
+export(normalizeByGlob)
 export(plot_annHeatmap2)
