--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(blue.colors)
 export(dist)
 export(dusk.colors)
 export(eset_lm)
+export(eset_presence_absence)
 export(exhaustive_ratios)
 export(heatmap.plus.2)
 export(hot.colors)
@@ -12,3 +13,6 @@ export(jet.colors)
 export(jet2.colors)
 export(normalizeByGlob)
 export(plot_annHeatmap2)
+importFrom(Biobase,exprs)
+importFrom(Biobase,featureNames)
+importFrom(Biobase,pData)
