--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(hot.colors)
 export(hot2.colors)
 export(jet.colors)
 export(jet2.colors)
+export(knn_imputation)
 export(normalizeByGlob)
 export(plot_annHeatmap2)
 importFrom(Biobase,exprs)
