additions of lr/rf modeling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,25 @@ export(hot2.colors)
 export(jet.colors)
 export(jet2.colors)
 export(knn_imputation)
+export(lr_modeling)
 export(normalizeByGlob)
+export(plotAUC)
 export(plot_annHeatmap2)
+export(rf_modeling)
+import(Boruta)
+import(glmnet)
+import(randomForest)
+import(varSelRF)
 importFrom(Biobase,exprs)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
+importFrom(ROCR,performance)
+importFrom(ROCR,prediction)
+importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+importFrom(iterators,icount)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,mclapply)
+importFrom(parallel,stopCluster)
