several new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,14 +11,18 @@ export(heatmap.3)
 export(heatmap.plus.2)
 export(hot.colors)
 export(hot2.colors)
+export(image_msnset)
 export(jet.colors)
 export(jet2.colors)
 export(knn_imputation)
 export(lr_modeling)
+export(lsos)
+export(msnset2text)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(plotAUC)
 export(plot_annHeatmap2)
+export(readSkyLinePRR)
 export(rf_modeling)
 import(Boruta)
 import(glmnet)
@@ -33,10 +37,27 @@ importFrom(ROCR,prediction)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
+importFrom(grid,unit)
 importFrom(iterators,icount)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
+importFrom(plyr,ddply)
+importFrom(reshape2,melt)
+importFrom(scales,rescale)
