msnset2txt update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(jet2.colors)
 export(knn_imputation)
 export(lr_modeling)
 export(lsos)
-export(msnset2text)
+export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(plotAUC)
