capability to read MaxQuant proteinGroup.txt files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(normalizeByGlob)
 export(normalizeByRef)
 export(plotAUC)
 export(plot_annHeatmap2)
+export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(rf_modeling)
 import(Boruta)
@@ -30,6 +31,7 @@ import(randomForest)
 import(varSelRF)
 importFrom(Biobase,exprs)
 importFrom(Biobase,featureNames)
+importFrom(Biobase,lcPrefix)
 importFrom(Biobase,pData)
 importFrom(MSnbase,MSnSet)
 importFrom(ROCR,performance)
