added roll-up function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,11 +25,13 @@ export(plot_annHeatmap2)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(rf_modeling)
+export(rrollup)
 import(Boruta)
 import(glmnet)
 import(randomForest)
 import(varSelRF)
 importFrom(Biobase,exprs)
+importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,lcPrefix)
 importFrom(Biobase,pData)
@@ -56,6 +58,7 @@ importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
 importFrom(iterators,icount)
+importFrom(outliers,grubbs.test)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
