--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(normalizeByRef)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_pca_v1)
+export(plot_pca_v2)
+export(plot_pca_v3)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(rf_modeling)
@@ -39,9 +41,11 @@ importFrom(Biobase,featureNames)
 importFrom(Biobase,lcPrefix)
 importFrom(Biobase,pData)
 importFrom(MSnbase,MSnSet)
+importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
-importFrom(ade4,dudi.pca)
+importFrom(ade4,"dudi.coa")
+importFrom(ade4,"dudi.pca")
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -71,12 +75,15 @@ importFrom(iterators,icount)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
+importFrom(made4,ord)
+importFrom(made4,plotarrays)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
+importFrom(pcaMethods,pca)
 importFrom(plyr,ddply)
 importFrom(reshape2,melt)
 importFrom(scales,rescale)
