introducing remove_covariate function to dealing with batch effects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,12 +29,14 @@ export(plot_pca_v2)
 export(plot_pca_v3)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
+export(remove_covariate)
 export(rf_modeling)
 export(rrollup)
 import(Boruta)
 import(glmnet)
 import(randomForest)
 import(varSelRF)
+importClassesFrom(Matrix,dgCMatrix)
 importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
@@ -44,7 +46,6 @@ importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
-importFrom(ade4,"dudi.coa")
 importFrom(ade4,"dudi.pca")
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
