custom xtable for knitr/latex

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ License: Beerware
 Depends: R (>= 2.10), MSnbase
 Imports: parallel, Biostrings, Boruta, ROCR, doParallel, plyr, gplots,
          foreach, glmnet, iterators, randomForest, varSelRF, Biobase, Heatplus,
-         ade4, made4, outliers, ggplot2
+         ade4, made4, outliers, ggplot2, xtable
 VignetteBuilder: knitr
 Suggests: knitr
 
