--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(jet.colors)
 export(jet2.colors)
 export(knn_imputation)
 export(limma_a_b)
+export(limma_gen)
 export(lr_modeling)
 export(lsos)
 export(make.unique.2)
@@ -26,7 +27,6 @@ export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_pca_v1)
 export(plot_pca_v2)
-export(plot_pca_v3)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(remove_covariate)
@@ -88,3 +88,4 @@ importFrom(pcaMethods,pca)
 importFrom(plyr,ddply)
 importFrom(reshape2,melt)
 importFrom(scales,rescale)
+importFrom(xtable,xtable)
