filtering of "enrichResults" form clusterProfilter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(readSkyLinePRR)
 export(remove_covariate)
 export(rf_modeling)
 export(rrollup)
+export(subset_by_size)
+export(xtable2)
 import(Boruta)
 import(glmnet)
 import(randomForest)
@@ -40,7 +42,6 @@ importClassesFrom(Matrix,dgCMatrix)
 importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
-importFrom(Biobase,lcPrefix)
 importFrom(Biobase,pData)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
@@ -86,6 +87,8 @@ importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
 importFrom(pcaMethods,pca)
 importFrom(plyr,ddply)
+importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
 importFrom(scales,rescale)
+importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
