update of MaxQuant reader

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(make.unique.2)
 export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
+export(normalize_by_feature_property)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_pca_v1)
