--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,9 +34,11 @@ export(remove_covariate)
 export(rf_modeling)
 export(rrollup)
 export(subset_by_size)
+export(volcano_plot)
 export(xtable2)
 import(Boruta)
 import(glmnet)
+import(qvalue)
 import(randomForest)
 import(varSelRF)
 importClassesFrom(Matrix,dgCMatrix)
@@ -44,6 +46,7 @@ importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
+importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
@@ -58,19 +61,25 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat_ellipse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
@@ -90,6 +99,9 @@ importFrom(pcaMethods,pca)
 importFrom(plyr,ddply)
 importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
+importFrom(scales,log_breaks)
+importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
+importFrom(scales,trans_new)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
