changes associated with roxygen version increment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_pca_v1)
 export(plot_pca_v2)
+export(plot_pca_v3)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(remove_covariate)
@@ -101,5 +102,6 @@ importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
 importFrom(scales,trans_new)
+importFrom(stringr,str_wrap)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
