FField dependency (imprort)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     ggplot2,
     xtable,
     clusterProfiler,
-    stringr
+    stringr,
+    FField
 VignetteBuilder: knitr
 Suggests:
     knitr
