--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,3 +105,4 @@ importFrom(scales,trans_new)
 importFrom(stringr,str_wrap)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
+importFrom(ggrepel,geom_label_repel)
