wrapping ComBat batch correction capability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(blue.colors)
 export(concatenate_by_features)
+export(correct_batch_effect)
 export(dist)
 export(dusk.colors)
 export(eset_lm)
@@ -54,6 +55,13 @@ importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(ade4,"dudi.pca")
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
@@ -104,5 +112,8 @@ importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
 importFrom(scales,trans_new)
 importFrom(stringr,str_wrap)
+importFrom(sva,ComBat)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,gather)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
