--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(normalizeByRef)
 export(normalize_by_feature_property)
 export(plotAUC)
 export(plot_annHeatmap2)
+export(plot_feature)
 export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
