added mixed effects anova capability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(limma_gen)
 export(lr_modeling)
 export(lsos)
 export(make.unique.2)
+export(mixed_effects_anova)
 export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
@@ -56,10 +57,14 @@ importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(ade4,"dudi.pca")
 importFrom(doParallel,registerDoParallel)
-importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,do)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,matches)
+importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
@@ -98,6 +103,8 @@ importFrom(iterators,icount)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
+importFrom(lme4,lmer)
+importFrom(magrittr,"%>%")
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
 importFrom(parallel,detectCores)
