--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vp.misc
 Type: Package
-Title: Miscelaneuos functions used by Vlad Petyuk for proteomics data analysis
+Title: Miscellaneous functions used by Vlad Petyuk for proteomics data analysis
 Version: 0.1
 Date: 2015-03-24
 Author: Vladislav Petyuk
