added MaxQuant peptide quant data reading capability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(plot_feature)
 export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
+export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
 export(remove_covariate)
