working on handling PTMs. example needs some improvement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,14 @@ export(hot2.colors)
 export(image_msnset)
 export(jet.colors)
 export(jet2.colors)
+export(keep_longest_isoform_per_gene)
 export(knn_imputation)
 export(limma_a_b)
 export(limma_gen)
 export(lr_modeling)
 export(lsos)
 export(make.unique.2)
+export(map_PTM_sites)
 export(mixed_effects_anova)
 export(msnset2txt)
 export(normalizeByGlob)
@@ -67,7 +69,10 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,semi_join)
 importFrom(dplyr,summarize)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -114,15 +119,25 @@ importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
 importFrom(pcaMethods,pca)
 importFrom(plyr,ddply)
+importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
+importFrom(rlang,"!!")
+importFrom(rlang,parse_expr)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
 importFrom(scales,trans_new)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_length)
+importFrom(stringr,str_locate_all)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_sub)
 importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
+importFrom(tidyselect,one_of)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
