--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: A collection of customized functions used for
     The package contains customized heatmaps, colorschemes,
     convienient nested linear models, machine learning utilities, etc.
 License: Beerware
+biocViews:
 Depends:
     R (>= 2.10),
     MSnbase
