adding lme4 dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     clusterProfiler,
     stringr,
     FField,
-    sva
+    sva,
+    lme4
 VignetteBuilder: knitr
 Suggests:
     knitr
