--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     e1071,
     UniProt.ws,
     org.Hs.eg.db,
-    biomaRt
+    biomaRt,
+    GOstats
 VignetteBuilder: knitr
 Suggests:
     knitr
