added flexible batch correcting function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(plot_pca_v3)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
+export(remove_batch_effect)
 export(remove_covariate)
 export(rf_modeling)
 export(rrollup)
