+ libraries for total least squares regression

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,9 @@ Imports:
     WGCNA,
     gelnet,
     multcomp,
-    bnlearn
+    bnlearn,
+    pracma,
+    MethComp
 VignetteBuilder: knitr
 Suggests:
     knitr
