added K-CV to machine learning modeling tools

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,8 +53,7 @@ Imports:
     gelnet,
     multcomp,
     bnlearn,
-    pracma,
-    MethComp
+    pracma
 VignetteBuilder: knitr
 Suggests:
     knitr
