--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(plot_feature)
 export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
+export(protein_inference)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
 export(readSkyLinePRR)
@@ -60,10 +61,14 @@ importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(ade4,"dudi.pca")
+importFrom(data.table,rbindlist)
+importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,arrange)
+importFrom(dplyr,case_when)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
@@ -125,6 +130,7 @@ importFrom(purrr,map2)
 importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
 importFrom(rlang,"!!")
+importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
