Catch up NAMESPACE with dependency on BiocParallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
+importFrom(BiocParallel,bpparam)
 importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
