Add pc_reduction() funtion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(normalize_by_feature_property)
+export(pc_reduction)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
