added empirical bayes LM batch correction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(blue.colors)
 export(concatenate_by_features)
 export(correct_batch_effect)
+export(correct_batch_effect_empiricalBayesLM)
 export(dist)
 export(dusk.colors)
 export(eset_lm)
@@ -55,11 +56,13 @@ importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
+importFrom(BiocParallel,bpparam)
 importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
+importFrom(WGCNA,empiricalBayesLM)
 importFrom(ade4,"dudi.pca")
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
