--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(plot_feature)
 export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
+export(plot_pca_v4)
 export(protein_inference)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
