Add plot_umap documentation, update others

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
 export(plot_pca_v4)
+export(plot_umap)
 export(protein_inference)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
@@ -151,5 +152,6 @@ importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyselect,one_of)
+importFrom(umap,umap)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
