--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ import(Boruta)
 import(glmnet)
 import(qvalue)
 import(randomForest)
+import(umap)
 import(varSelRF)
 importClassesFrom(Matrix,dgCMatrix)
 importFrom(Biobase,exprs)
@@ -152,6 +153,5 @@ importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyselect,one_of)
-importFrom(umap,umap)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
