--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: vp.misc
+Package: MSnSet.utils
 Type: Package
 Title: Miscellaneous functions used by Vlad Petyuk for proteomics data analysis
 Version: 0.1
