--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: Miscellaneous functions used by Vlad Petyuk for proteomics data analysis
 Version: 0.1
 Date: 2015-03-24
+Encoding: UTF-8
 Author: Vladislav Petyuk
 Maintainer: Vladislav Petyuk <petyuk@gmail.com>
 Description: A collection of customized functions used for
