--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(jet2.colors)
 export(keep_longest_isoform_per_gene)
 export(knn_imputation)
 export(limma_a_b)
+export(limma_contrasts)
 export(limma_gen)
 export(lr_modeling)
 export(lsos)
@@ -71,6 +72,7 @@ importFrom(ade4,"dudi.pca")
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,do)
@@ -119,8 +121,10 @@ importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
 importFrom(iterators,icount)
+importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
+importFrom(limma,makeContrasts)
 importFrom(limma,topTable)
 importFrom(lme4,lmer)
 importFrom(magrittr,"%>%")
@@ -151,6 +155,7 @@ importFrom(stringr,str_sub)
 importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,everything)
 importFrom(tidyr,gather)
 importFrom(tidyselect,one_of)
 importFrom(xtable,print.xtable)
