Updates to limma_contrasts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(keep_longest_isoform_per_gene)
 export(knn_imputation)
 export(limma_a_b)
 export(limma_contrasts)
-export(limma_contrasts_2)
+export(limma_contrasts_ref)
 export(limma_gen)
 export(lr_modeling)
 export(lsos)
