--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(keep_longest_isoform_per_gene)
 export(knn_imputation)
 export(limma_a_b)
 export(limma_contrasts)
-export(limma_contrasts_ref)
 export(limma_gen)
 export(lr_modeling)
 export(lsos)
@@ -31,6 +30,7 @@ export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(normalize_by_feature_property)
+export(pairwise_contrasts)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
@@ -121,6 +121,7 @@ importFrom(ggrepel,geom_label_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
+importFrom(gtools,combinations)
 importFrom(iterators,icount)
 importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
