--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(plot_pca_v2)
 export(plot_pca_v3)
 export(plot_pca_v4)
 export(plot_umap)
+export(plot_volcano)
 export(protein_inference)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
@@ -48,11 +49,9 @@ export(remove_covariate)
 export(rf_modeling)
 export(rrollup)
 export(subset_by_size)
-export(volcano_plot)
 export(xtable2)
 import(Boruta)
 import(glmnet)
-import(qvalue)
 import(randomForest)
 import(umap)
 import(varSelRF)
@@ -62,7 +61,6 @@ importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
 importFrom(BiocParallel,bpparam)
-importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
@@ -100,8 +98,6 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
-importFrom(ggplot2,geom_segment)
-importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
@@ -115,8 +111,8 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
-importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_label_repel)
+importFrom(ggrepel,geom_text_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
