--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
 importFrom(BiocParallel,bpparam)
+importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
@@ -98,6 +99,8 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
@@ -111,6 +114,7 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
 importFrom(gplots,bluered)
