--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,12 +3,12 @@
 on:
   push:
     branches:
-      - main
       - master
+      - improve/update_existing
   pull_request:
     branches:
-      - main
       - master
+      - improve/update_existing
 
 name: R-CMD-check
 
@@ -33,13 +33,16 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Set up Git Repository
+        uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v1
         with:
           r-version: ${{ matrix.config.r }}
 
-      - uses: r-lib/actions/setup-pandoc@v1
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v1
 
       - name: Query dependencies
         run: |
@@ -74,7 +77,7 @@ jobs:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: |
           options(crayon.enabled = TRUE)
-          rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+          rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran", "--no-stop-on-test-error", "--ignore-vignettes"), build_args = "--no-build-vignettes", error_on = "error", check_dir = "check")
         shell: Rscript {0}
 
       - name: Upload check results
@@ -83,3 +86,4 @@ jobs:
         with:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
+
