Fix missing UMAP legend when show_ellipse is FALSE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ importFrom(Biobase,pData)
 importFrom(BiocParallel,bpparam)
 importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
+importFrom(MSnbase,exprs)
+importFrom(MSnbase,pData)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
