--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(plot_pca_v1)
 export(plot_pca_v2)
 export(plot_pca_v3)
 export(plot_pca_v4)
+export(plot_sample_correlation_heatmap)
+export(plot_sample_correlation_pheatmap)
 export(plot_umap)
 export(plot_volcano)
 export(protein_inference)
@@ -64,6 +66,8 @@ importFrom(Biobase,pData)
 importFrom(BiocParallel,bpparam)
 importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
+importFrom(MSnbase,exprs)
+importFrom(MSnbase,pData)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
@@ -137,6 +141,7 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
 importFrom(pcaMethods,pca)
+importFrom(pheatmap,pheatmap)
 importFrom(plyr,ddply)
 importFrom(purrr,map)
 importFrom(purrr,map2)
