--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(rrollup)
 export(subset_by_size)
 export(xtable2)
 import(Boruta)
+import(ggrepel)
 import(glmnet)
 import(randomForest)
 import(umap)
@@ -65,6 +66,8 @@ importFrom(BiocParallel,bpparam)
 importFrom(FField,FFieldPtRep)
 importFrom(MSnbase,MSnSet)
 importFrom(MSnbase,exprs)
+importFrom(MSnbase,fData)
+importFrom(MSnbase,featureNames)
 importFrom(MSnbase,pData)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
@@ -76,6 +79,7 @@ importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,arrange_at)
 importFrom(dplyr,case_when)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
@@ -85,6 +89,7 @@ importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,order_by)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
@@ -94,6 +99,7 @@ importFrom(dplyr,summarize)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
@@ -105,6 +111,7 @@ importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
@@ -122,6 +129,7 @@ importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
+importFrom(graphics,image)
 importFrom(grid,unit)
 importFrom(gtools,combinations)
 importFrom(iterators,icount)
@@ -147,6 +155,7 @@ importFrom(reshape2,melt)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
+importFrom(scales,alpha)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
