Add plot_enrichment function
Added function for plotting enrichment results. Currently only works with objects of class "enrichResult" from either ReactomePA or clusterProfiler. Need to eventually make this a method that works for the same classes as enrichplot::dotplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(normalize_by_feature_property)
 export(pairwise_contrasts)
 export(plotAUC)
 export(plot_annHeatmap2)
+export(plot_enrichment)
 export(plot_feature)
 export(plot_pca_v1)
 export(plot_pca_v2)
@@ -89,6 +90,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,order_by)
@@ -97,6 +99,8 @@ importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
+importFrom(dplyr,slice_max)
+importFrom(dplyr,slice_min)
 importFrom(dplyr,summarize)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -106,6 +110,7 @@ importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
@@ -117,18 +122,21 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_gradient)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,stat_ellipse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_label_repel)
-importFrom(ggrepel,geom_text_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
 importFrom(graphics,image)
@@ -159,7 +167,9 @@ importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
 importFrom(scales,alpha)
+importFrom(scales,label_wrap)
 importFrom(scales,log_breaks)
+importFrom(scales,percent_format)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
 importFrom(scales,trans_new)
@@ -168,6 +178,7 @@ importFrom(stringr,str_length)
 importFrom(stringr,str_locate_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
+importFrom(stringr,str_to_sentence)
 importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
