--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
@@ -171,6 +172,8 @@ importFrom(scales,log_breaks)
 importFrom(scales,percent_format)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
+importFrom(scales,scientific)
+importFrom(scales,trans_breaks)
 importFrom(scales,trans_new)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
