Add missing imports and globalVariables
If using non-standard evaluation, variables in notes that said "no visible binding for global variable" were added after their associated function in a globalVariables() call.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,20 +58,26 @@ import(Boruta)
 import(ggrepel)
 import(glmnet)
 import(randomForest)
-import(umap)
 import(varSelRF)
 importClassesFrom(Matrix,dgCMatrix)
+importFrom(Biobase,"exprs<-")
 importFrom(Biobase,exprs)
 importFrom(Biobase,fData)
 importFrom(Biobase,featureNames)
 importFrom(Biobase,pData)
+importFrom(Biobase,sampleNames)
 importFrom(BiocParallel,bpparam)
+importFrom(DOSE,geneInCategory)
 importFrom(FField,FFieldPtRep)
+importFrom(Heatplus,RainbowPastel)
+importFrom(Heatplus,convAnnData)
+importFrom(Heatplus,picketPlotControl)
 importFrom(MSnbase,MSnSet)
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
 importFrom(MSnbase,featureNames)
 importFrom(MSnbase,pData)
+importFrom(MSnbase,sampleNames)
 importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
@@ -84,6 +90,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,arrange_at)
 importFrom(dplyr,case_when)
+importFrom(dplyr,distinct)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -113,6 +120,7 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
@@ -120,6 +128,7 @@ importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_colorbar)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
@@ -130,8 +139,10 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,stat_ellipse)
+importFrom(ggplot2,sym)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,vars)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
@@ -139,7 +150,23 @@ importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_label_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,frame)
+importFrom(graphics,grid)
 importFrom(graphics,image)
+importFrom(graphics,layout)
+importFrom(graphics,legend)
+importFrom(graphics,matlines)
+importFrom(graphics,matplot)
+importFrom(graphics,matpoints)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,rect)
+importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(grid,unit)
 importFrom(gtools,combinations)
 importFrom(iterators,icount)
@@ -161,7 +188,9 @@ importFrom(pheatmap,pheatmap)
 importFrom(plyr,ddply)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map_chr)
 importFrom(qvalue,qvalue)
+importFrom(reshape2,acast)
 importFrom(reshape2,melt)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
@@ -175,17 +204,55 @@ importFrom(scales,rescale)
 importFrom(scales,scientific)
 importFrom(scales,trans_breaks)
 importFrom(scales,trans_new)
+importFrom(stats,anova)
+importFrom(stats,as.dendrogram)
+importFrom(stats,as.dist)
+importFrom(stats,as.formula)
+importFrom(stats,binom.test)
+importFrom(stats,binomial)
+importFrom(stats,chisq.test)
+importFrom(stats,coef)
+importFrom(stats,coefficients)
+importFrom(stats,complete.cases)
+importFrom(stats,cor)
+importFrom(stats,fisher.test)
+importFrom(stats,glm)
+importFrom(stats,hclust)
+importFrom(stats,heatmap)
+importFrom(stats,lm)
+importFrom(stats,loess)
+importFrom(stats,lowess)
+importFrom(stats,median)
+importFrom(stats,medpolish)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,order.dendrogram)
+importFrom(stats,prcomp)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,reorder)
+importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
 importFrom(stringr,str_locate_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
-importFrom(stringr,str_to_sentence)
 importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,everything)
 importFrom(tidyr,gather)
 importFrom(tidyselect,one_of)
+importFrom(umap,umap)
+importFrom(umap,umap.defaults)
+importFrom(utils,flush.console)
+importFrom(utils,head)
+importFrom(utils,read.csv)
+importFrom(utils,read.delim)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(utils,write.table)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
+importMethodsFrom(MSnbase,"featureNames<-")
