--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,6 +173,7 @@ importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(grid,unit)
 importFrom(gtools,combinations)
+importFrom(invgamma,dinvgamma)
 importFrom(iterators,icount)
 importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
