extended ESI stability normalization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(dist)
 export(dusk.colors)
 export(eset_lm)
 export(eset_presence_absence)
+export(evaluate_parameter_effect)
 export(exhaustive_ratios)
 export(heatmap.3)
 export(heatmap.plus.2)
@@ -32,6 +33,7 @@ export(msnset2txt)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(normalize_by_feature_property)
+export(normalize_by_feature_property_partitioned)
 export(pairwise_contrasts)
 export(plotAUC)
 export(plot_annHeatmap2)
