catch-up with rollup_using_representative

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(readSkyLinePRR)
 export(remove_batch_effect)
 export(remove_covariate)
 export(rf_modeling)
+export(rollup_using_representative)
 export(rrollup)
 export(subset_by_size)
 export(xtable2)
@@ -91,9 +92,12 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,arrange_at)
 importFrom(dplyr,case_when)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
@@ -113,6 +117,7 @@ importFrom(dplyr,semi_join)
 importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_min)
 importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(genefilter,rowVars)
