--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,7 +62,9 @@ export(xtable2)
 import(Boruta)
 import(ggrepel)
 import(glmnet)
+import(limma)
 import(randomForest)
+import(statmod)
 import(varSelRF)
 importClassesFrom(Matrix,dgCMatrix)
 importFrom(Biobase,"exprs<-")
@@ -100,6 +102,7 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
@@ -164,6 +167,7 @@ importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
+importFrom(graphics,barplot)
 importFrom(graphics,frame)
 importFrom(graphics,grid)
 importFrom(graphics,image)
@@ -175,6 +179,7 @@ importFrom(graphics,matplot)
 importFrom(graphics,matpoints)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
+importFrom(graphics,points)
 importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(graphics,title)
@@ -182,10 +187,8 @@ importFrom(grid,unit)
 importFrom(gtools,combinations)
 importFrom(invgamma,dinvgamma)
 importFrom(iterators,icount)
-importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
-importFrom(limma,makeContrasts)
 importFrom(limma,topTable)
 importFrom(lme4,lmer)
 importFrom(magrittr,"%>%")
@@ -235,6 +238,7 @@ importFrom(stats,hclust)
 importFrom(stats,heatmap)
 importFrom(stats,lm)
 importFrom(stats,loess)
+importFrom(stats,loess.control)
 importFrom(stats,lowess)
 importFrom(stats,median)
 importFrom(stats,medpolish)
@@ -252,6 +256,7 @@ importFrom(stats,qqnorm)
 importFrom(stats,qqplot)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
+importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,smooth.spline)
 importFrom(stats,terms)
@@ -264,7 +269,6 @@ importFrom(stringr,str_sub)
 importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
-importFrom(tidyr,everything)
 importFrom(tidyr,gather)
 importFrom(tidyselect,one_of)
 importFrom(umap,umap)
